# flask-vue-template

./: .gitignore
backend/: .gitignore  Pipfile  README.md  app.py  pyproject.toml
backend/core/: __init__.py  functions.py  models.py  utils.py
backend/migrations/: alembic.ini
backend/migrations/versions/: 8617a999f770_initial_migration.py  8ca9a14f87a3_user_migration_with_test_entries.py
frontend/: .gitignore  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js  store.js
frontend/src/components/: HelloWorld.vue  Navbar.vue  NewEntry.vue  SignIn.vue  SignUp.vue  SlideTransition.vue  TestPage.vue  User.vue  UserEntries.vue  UserSession.vue
frontend/src/components/errors/: NotSignedInError.vue
frontend/src/components/transitions/: BasicTransition.vue  EntriesTransition.vue  SignInOutTransition.vue
frontend/src/router/: endpoints.js  index.js  routes.js
frontend/src/views/: Home.vue
