[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["adempus <jmorin722@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-cors = "^3.0.8"
flask-migrate = "^2.5.3"
bcrypt = "^3.1.7"
mysqlclient = "^1.4.6"
pyjwt = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
